--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@
     --blue: #274671;
 }
 body {
-    font-family: 'Roboto Slab', sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 /** Nav */
 .nav {
@@ -25,6 +25,7 @@ body {
     position: fixed;
     width: 100%;
     z-index: 10;
+    cursor: pointer;
 }
 .nav__img {
     height: 55px;
@@ -32,7 +33,7 @@ body {
 .nav__button {
     background-color: transparent;
     border: none;
-    font-size: 28px;
+    font-size: 45px;
     cursor: pointer;
     color: var(--grey);
     transition: 0.5s;
@@ -41,7 +42,6 @@ body {
     transform: scale(1.3);
     color: var(--red);
 }
-
 /** Desplegable carrito */
 .nav__car {
     background-color: var(--light_grey);
@@ -51,43 +51,104 @@ body {
     top: 65px;
     overflow-y: scroll;
     transition: 0.5s;
-    box-shadow: 5px 10px 20px 0px;
+    box-shadow: 5px 10px 20px 0px #43434384;
     left: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+.nav__car--visible {
+    left: 60%;
+}
 .nav__car__counter {
     background-color: var(--blue);
-    color: var(--white);
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    font-size: 13px;
-    position: absolute;
-    right: 5px;
+    width: 25px;
+    height: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: var(--white);
+    font-size: 15px;
+    position: absolute;
+    right: 5px;
 }
-/** carrito */
+/** Carrito */
 .car__product {
     max-width: 300px;
     margin: 30px 0;
 }
-
-/**header */
-header {
-    height: 300px;
+.car__product__image {
+    display: flex;
+    justify-content: center;
+}
+.car__product__image img {
+    max-width: 150px;
+}
+.car__product__description {
+    margin: 20px 30px;
+}
+.car__product__button {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 30px;
+}
+.delete__product {
+    margin-bottom: 20px;
+    border: none;
+    background-color: var(--red);
+    padding: 10px 20px;
+    color: var(--white);
+    border-radius: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.delete__product:hover {
+    transform: scale(1.1);
+}
+.sum-values {
+    margin-top: 40px;
+    color: var(--blue);
+}
+.empty__button {
+    border: none;
+    width: 100px;
+    padding: 10px;
+    background-color: var(--red);
+    color: var(--white);
+    border-radius: 20px;
+    margin: 40px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.empty__button:hover {
+    transform: scale(1.1);
+}
+/** Header */
+.header {
+    height: 350px;
     background-color: var(--red);
     display: flex;
     justify-content: center;
     align-items: center;
 }
+.header__h1 {
+    font-size: 45px;
+    color: var(--light_grey);
+    filter: drop-shadow(5px 0px 0.5px var(--blue));
+}
 .header__img {
     height: 200px;
+    margin-top: 60px;
 }
-/* main */
+/** Main */
+.main {
+    display: flex;
+    justify-content: center;
+}
+.main__section {
+    max-width: 1180px;
+}
 .main__h3 {
     margin: 40px;
     font-size: 26px;
@@ -102,20 +163,311 @@ header {
     margin: 60px 40px;
 }
 .products__element {
-    max-width:  300px;
+    max-width: 300px;
+    border: 1px solid #43434325;
+    border-radius: 20px;
+    transition: 0.5s;
+}
+.products__element:hover {
+    transform: scale(1.1);
 }
 .products__img {
     max-width: 290px;
+    transition: 0.5s;
 }
-/** Footer */
-.footer {
-    min-height: 200px;
-    background-color: var(--blue);
+.products__element:hover .products__img {
+    rotate: 5deg;
+    transform: scale(1.1);
+    filter: drop-shadow(5px 5px 4px #26262690)
+}
+.products__button:hover {
+    transform: scale(1.2);
+}
+.products__name {
+    padding: 10px 20px;
+    color: var(--grey);
+    font-size: 14px;
+}
+.products__div {
+    display: flex;
+    gap: 5px;
+    margin: 10px 20px;
+    font-size: 18px;
+}
+.products__usd {
+    color: var(--grey);
+}
+.products__price {
+    color: var(--red);
+}
+.products__div--flex {
+    justify-content: flex-end;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.products__button {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border: 1px solid var(--grey);
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 22px;
+    color: var(--red);
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 3px 2px 5px 0px #4343435e;
 }
-.footer__p {
+.products__button--search {
+    color: var(--blue);
+}
+/** Modal */
+.modal {
+    background-color: var(--white);
+    border-radius: 20px;
+    width: 85%;
+    max-width: 1000px;
+    min-height: 65%;
+    position: fixed;
+    top: 15%;
+    box-shadow: 0px 10px 20px 8px #43434385;
+    display: none;
+}
+.close {
+    display: flex;
+    justify-content: flex-end;
+    color: var(--red);
+    font-size: 26px;
+}
+.modal__icon {
+    margin: 10px 20px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.modal__icon:hover {
+    transform: scale(1.3);
+}
+/* Clase muestra modal */
+.show__modal {
+    display: block;
+}
+/** Vista interna del modal */
+.modal__view {
+    padding: 20px 80px;
+}
+.modal__info {
+    display: flex;
+}
+.modal__info--first {
+    color: var(--grey);
+}
+.modal__info--first img {
+    max-width: 120px;
+    margin-bottom: 20px;
+}
+.modal__info--first h3 {
+    font-size: 22px;
+    margin-bottom: 10px;
+    font-weight: 400;
+}
+.modal__info--first h2 {
+    font-size: 26px;
+    margin-bottom: 10px;
+}
+.modal__info--first h4:nth-child(3) {
+    margin-bottom: 20px;
+}
+.modal__info--first h4:nth-child(4), h4:nth-child(6) {
+    margin-bottom: 10px;
+}
+.modal__info--second {
+    position: relative;
+}
+.modal__info--second img {
+    max-width: 400px;
+    position: relative;
+    z-index: 10;
+    left: 33px;
+    top: 20px;
+    transition: 0.5s;
+}
+.modal__info--second img:hover {
+    rotate: 5deg;
+    transform: scale(1.1);
+    filter: drop-shadow(8px 8px 4px #26262690)
+}
+.modal__info--second div {
+    height: 450px;
+    width: 250px;
+    background-color: var(--red);
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 0;
+}
+/** Footer */
+.footer {
+    background-color:var(--light_grey);
+    padding: 5rem 0rem;
+}
+.footer .footer__div {
+    width: 85%;
+    display: flex;
+    margin: 0 auto;
+    gap: 5rem;
+    justify-content: center;
+    display: flex;
+}
+.footer .footer__div .footer__div--section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.footer .footer__div .footer__div--section h4{
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--blue);
+}
+.footer .footer__div .footer__div--section ul li {
+    margin-bottom: 1rem;
+}
+.footer .footer__div .footer__div--section ul li a{
+    text-decoration: none;
+    color: var(--grey);
+    font-weight: 500;
+    font-size: 1.5rem;
+}
+.footer .footer__div .footer__div--section ul li:hover a {
+    color: #262626;
+}
+.footer .footer__div .footer__div--section:nth-of-type(4) ul {
+    display: flex;
+    gap: 1rem;
+}
+.footer .footer__div .footer__div--section:nth-of-type(4) ul li a {
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    width: 3rem;
+    height: 3rem;
+}
+.footer .footer__div .footer__div--section:nth-of-type(4) ul li:nth-of-type(1) a{
+    background-image: url("../img/facebook.svg");;
+}
+.footer .footer__div .footer__div--section:nth-of-type(4) ul li:nth-of-type(2) a {
+    background-image:  url("../img/twitter.svg");;
+}
+.footer .footer__div .footer__div--section:nth-of-type(4) ul li:nth-of-type(3) a {
+    background-image:  url("../img/instagram.svg");
+}
+.footer .footer__div .footer__div--section:nth-of-type(4) ul li:nth-of-type(1):hover a {
+    background-image: url("../img/facebook-hover.svg");
+}
+.footer .footer__div .footer__div--section:nth-of-type(4) ul li:nth-of-type(2):hover a {
+    background-image:  url("../img/twitter-hover.svg");
+}
+.footer .footer__div .footer__div--section:nth-of-type(4) ul li:nth-of-type(3):hover a {
+    background-image: url("../img/instagram-hover.svg");
+}  
+.footer .footer__div--info {
+    background-color: var(--red);
+    width: 95%;
+    margin: 0 auto;
+    height: 5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10rem;
+}
+.footer .footer__div--info p {
+    font-size: 1.5rem;
+    font-weight: bold;
     color: var(--white);
-    font-size: 17px;
+}
+.footer .footer__div--info p a {
+    text-decoration: none;
+    color: var(--grey);
+}
+/* Media queries */
+@media screen and (max-width: 1920px) {
+    .nav__car {
+        width: 20%;
+    }
+    .nav__car--visible {
+        left: 80%;
+    }
+}
+@media screen and (max-width: 1360px) {
+    .nav__car {
+        width: 30%;
+    }
+    .nav__car--visible {
+        left: 70%;
+    }
+}
+@media screen and (max-width: 900px) {
+    .nav__car {
+        width: 35%;
+    }
+    .nav__car--visible {
+        left: 65%;
+    }
+    .modal__view {
+        overflow-y: scroll;
+    }
+    .modal__info {
+        display: flex;
+        flex-direction: column-reverse;
+    }
+    .modal {
+        top: 80px;
+        max-height: 85vh;
+        overflow-y: scroll;
+    }
+    .modal__info--second {
+        margin-bottom: 60px;
+    }
+    .modal__info--second img {
+        left: 100px;
+    }
+}
+@media screen and (max-width: 768px) {
+    .nav__car {
+        width: 45%;
+    }
+    .nav__car--visible {
+        left: 55%;
+    }
+    .modal__info--second img {
+        left: 0;
+    }
+    .modal__view {
+        padding: 20px 40px;
+    }
+}
+@media screen and (max-width: 574px) {
+    .nav__car {
+        width: 80%;
+    }
+    .nav__car--visible {
+        left: 20%;
+    }
+    .modal__info--second img {
+        width: 300px;
+        left: 0;
+    }
+    .modal__info--second div {
+        height: 350px;
+        width: 180px;
+    }
+    .modal__view {
+        padding: 20px 40px;
+    }
+}
+@media (max-width: 300px){
+    .footer__div {
+        flex-direction: column;
+    }
 }
